appId: com.example.basic_demo.dev
---
- launchApp
- tapOn:
    id: "main_tab.home"
- assertVisible: "Steps: 0"
- tapOn:
    id: "home.counter.increment"
- extendedWaitUntil:
    visible: "Steps: 1"
    timeout: 10000
- tapOn:
    id: "home.counter.increment"
- extendedWaitUntil:
    visible: "Steps: 2"
    timeout: 10000
- tapOn:
    id: "home.counter.reset"
- extendedWaitUntil:
    visible: "Steps: 0"
    timeout: 10000
